# comparador-carteiras-recomendadas

./: .gitignore  README.md  docker-compose.yml
app/backend/core/: Dockerfile  pyproject.toml  requirements.txt
app/backend/core/core/: main.py
app/frontend/: Dockerfile
