[tool.poetry]
name = "core"
version = "0.1.0"
description = "Core Backend"
authors = ["phbrgnomo <phbrcc@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
